# recommender

./: .env.example  .gitignore  0_EDA.ipynb  1_feature.ipynb  2_training.ipynb  3_inference.ipynb  LICENSE  Makefile  README.md  pyproject.toml  streamlit_app.py
recsys/: config.py
recsys/hopsworks_integration/: __init__.py  feature_store.py
recsys/inference/: query_transformer.py  ranking_predictor.py  ranking_transformer.py
recsys/ui/: recommenders.py  utils.py
