[project]
name = "recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "hopsworks[python]>=4.1.8",
    "polars>=1.24.0",
    "pydantic-settings>=2.8.1",
    "streamlit>=1.43.2",
    "tensorflow>=2.18.1",
    "tensorflow-recommenders>=0.7.2",
]
