[project]
name = "recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "pip>=25.0.1",
    "hopsworks[python]>=4.1.8",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "polars>=1.24.0",
    "pydantic-settings>=2.8.1",
    "seaborn>=0.13.2",
    "streamlit>=1.43.2",
    "tensorflow==2.14",
    "tensorflow-recommenders>=0.7.2",
    "tensorflow-datasets>=4.9.8",
]

[dependency-groups]
dev = [
    "tensorflow-metal>=1.2.0",
]
